--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 					<div id="main"> 
 						<div class="inner">
 							<h1>That Strange Sensation</h1>
-							<img src=tss-1.jpg alt text='that strange sensation logo> </img>
+							<img src=tss-1.jpg alt text="that strange sensation logo"> </img>
 							<p><h9>To sign up to receive the next installment in your inbox, go <a href=https://docs.google.com/forms/d/13r9zOV1WA9pKq0Mif7C7cdIhgjhjsVURkTKXmV9N06Y/> here</a></h9></p>
-							    <details>
+							<details>
 							      <summary><h8><em>Part Seven</em></h8></summary>
 							      <p>The next morning is overcast, with a squall, dark and heavy, out near the horizon. Once again, L is alone on the part of the beach near the bamboo dock and metal boat. She digs her feet in the sand and looks through binoculars at the crates and the fluorescent zig-zag border, which appears even more unnatural in this gray, almost violet, pre-storm light. The wind is picking up. She feels she’s just on the verge of understanding something, as if a puzzle piece is about to snap into place, when she hears a <em>pop</em> loud enough to strain her eardrum. Not five feet in front of her, right at the water line, lies a tall, skinny man, wearing one water-logged boot and a scruffy pair of khaki trail shorts.</p>
 							      <p>He’s breathing rapidly. He lifts his head and looks around, catches sight of her. She tenses, then quickly crawls over. Soon she finds herself parroting George, projecting a friendliness and calm she doesn’t necessarily feel.</p>
@@ -109,7 +109,7 @@
 							      <p>xxxxx</p>
 							    </details>
 
-							    <details>
+							  <details>
 							      <summary><h8><em>Part Six</em></h8></summary>
 							      <p>The bryde whale with the timer on its back is not leaving the harbor. It swims a wide ellipse all afternoon, its gray back glinting in the sun. Ivy, George, and L stay out in the boat for more than an hour, listening to the sloshing of the water against the boat and waiting for the whale to breach again, which it does every twenty minutes or so, slowly drawing itself up out of the water, high enough that when it comes back down it sends a swell their way that makes the boat rock. It's as if the whale is showing off the timer, which L comes to realize looks like a giant 1980s-era Timex watch.</p>
 							      <p>By the time they return to the beach, a crowd of about twenty people has gathered. As George, Ivy, and L walk onto shore, the crowd remains silent, tight with anticipation.</p>
