--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="index.html" class="logo">
+								<a href="dezmediah.com" class="logo">
 									<span class="symbol"><img src="images/logo.gif" alt="" /></span><span class="title">Dezmediah</span>
 								</a>
 
@@ -39,13 +39,15 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="Publications.html">Publications</a></li>
-							<li><a href="Robot_Language.html">Robot Language</a></li>
-							<li><a href="Beep_Boop.html">Beep Boop</a></li>
-							<li><a href="Soundscapes_Worth_Saving.html">Soundscapes Worth Saving</a></li>
-							<li><a href="Catholicism_the_game.html">Catholicism the Game</a></li>
-							<li><a href="CV.html">CV</a></li>
+							<li><a href="dezmediah.com/index.html">Home</a></li>
+							<li><a href="dezmediah.com/Publications.html">Publications</a></li>
+							<li><a href="dezmediah.com/Robot_Language.html">Robot Language</a></li>
+							<li><a href="dezmediah.com/Beep_Boop.html">Beep Boop</a></li>
+							<li><a href="dezmediah.com/Soundscapes_Worth_Saving.html">Soundscapes Worth Saving</a></li>
+							<li><a href="dezmediah.com/Catholicism_the_game.html">Catholicism the Game</a></li>
+							<li><a href="dezmediah.com/CV.html">CV</a></li>
+							<li><a href="dezmediah.com/poems.html">Generative Poetry</a></li>
+							<li><a href="dezmediah.com/global-fellowship-blog.html">Global Fellowship Blog</a></li>
 						</ul>
 					</nav>
 
@@ -53,7 +55,7 @@
 					<div id="main"> 
 						<div class="inner">
 							<h1>That Strange Sensation</h1>
-							<img src=tss-1.jpg alt text="that strange sensation logo"> </img>
+							<article><span class="image"><img src=tss-1.jpg alt text="that strange sensation logo"> </img></span></article>
 							<p><h9>To sign up to receive the next installment in your inbox, go <a href=https://docs.google.com/forms/d/13r9zOV1WA9pKq0Mif7C7cdIhgjhjsVURkTKXmV9N06Y/> here</a></h9></p>
 							<details>
 							      <summary><h8><em>Part Seven</em></h8></summary>
