--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<div class="inner">
 
 							<!-- Logo -->
-								<a href="dezmediah.com" class="logo">
+								<a href="https://dezmediah.com" class="logo">
 									<span class="symbol"><img src="images/logo.gif" alt="" /></span><span class="title">Dezmediah</span>
 								</a>
 
@@ -39,15 +39,15 @@
 					<nav id="menu">
 						<h2>Menu</h2>
 						<ul>
-							<li><a href="dezmediah.com/index.html">Home</a></li>
-							<li><a href="dezmediah.com/Publications.html">Publications</a></li>
-							<li><a href="dezmediah.com/Robot_Language.html">Robot Language</a></li>
-							<li><a href="dezmediah.com/Beep_Boop.html">Beep Boop</a></li>
-							<li><a href="dezmediah.com/Soundscapes_Worth_Saving.html">Soundscapes Worth Saving</a></li>
-							<li><a href="dezmediah.com/Catholicism_the_game.html">Catholicism the Game</a></li>
-							<li><a href="dezmediah.com/CV.html">CV</a></li>
-							<li><a href="dezmediah.com/poems.html">Generative Poetry</a></li>
-							<li><a href="dezmediah.com/global-fellowship-blog.html">Global Fellowship Blog</a></li>
+							<li><a href="https://dezmediah.com/index.html">Home</a></li>
+							<li><a href="https://dezmediah.com/Publications.html">Publications</a></li>
+							<li><a href="https://dezmediah.com/Robot_Language.html">Robot Language</a></li>
+							<li><a href="https://dezmediah.com/Beep_Boop.html">Beep Boop</a></li>
+							<li><a href="https://dezmediah.com/Soundscapes_Worth_Saving.html">Soundscapes Worth Saving</a></li>
+							<li><a href="https://dezmediah.com/Catholicism_the_game.html">Catholicism the Game</a></li>
+							<li><a href="https://dezmediah.com/CV.html">CV</a></li>
+							<li><a href="https://dezmediah.com/poems.html">Generative Poetry</a></li>
+							<li><a href="https://dezmediah.com/global-fellowship-blog.html">Global Fellowship Blog</a></li>
 						</ul>
 					</nav>
 
