--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					<div id="main"> 
 						<div class="inner">
 							<h1>That Strange Sensation</h1>
-							<article><span class="image"><img src=tss-1.jpg alt text="that strange sensation logo"> </img></span></article>
+							<article><span class="image"><img src=images/tss-1.jpg alt text="that strange sensation logo"> </img></span></article>
 							<p><h9>To sign up to receive the next installment in your inbox, go <a href=https://docs.google.com/forms/d/13r9zOV1WA9pKq0Mif7C7cdIhgjhjsVURkTKXmV9N06Y/> here</a></h9></p>
 							<details>
 							      <summary><h8><em>Part Seven</em></h8></summary>
