--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<li><a href="https://dezmediah.com/index.html">Home</a></li>
 							<li><a href="https://dezmediah.com/Publications.html">Publications</a></li>
 							<li><a href="https://dezmediah.com/Robot_Language.html">Robot Language</a></li>
-							<li><a href="https://dezmediah.com/Beep_Boop.html">Beep Boop</a></li>
+							<li><a href="https://dezmediah.com/Beep_boop.html">Beep Boop</a></li>
 							<li><a href="https://dezmediah.com/Soundscapes_Worth_Saving.html">Soundscapes Worth Saving</a></li>
 							<li><a href="https://dezmediah.com/Catholicism_the_game.html">Catholicism the Game</a></li>
 							<li><a href="https://dezmediah.com/CV.html">CV</a></li>
