--- a/index.html
+++ b/index.html
@@ -58,6 +58,46 @@
 							<article><span class="image"><img src=images/tss-1.jpg alt text="that strange sensation logo" style="width:300px;height:300px;"> </img></span></article>
 							<p><h9>To sign up to receive the next installment in your inbox, go <a href=https://docs.google.com/forms/d/13r9zOV1WA9pKq0Mif7C7cdIhgjhjsVURkTKXmV9N06Y/> here</a></h9></p>
 							<details>
+								<summary><h8><em>Part Eight</em></h8></summary>
+								<p>After L’s initial excitement over the synchronicity of Paul’s discovery and their radiation-related struggles, 
+								she realizes that there are a few problems with the idea of using Paul’s mushrooms to clean up the radiation around the crates: 1) They don’t have any of the paultsake mushrooms here, as far as she knows; 2) Even if they did, how would they get them over there without getting blasted by radiation themselves?</p>
+								<p>“Maybe it doesn’t matter if we get irradiated in this world,” says Pai over breakfast. “Maybe we’ll return back to our lives completely radiation-free.”</p>
+								<p>“Maybe,” says L. “ I don’t know how comfortable I am with maybe.”</p>
+								<p>The bryde whale’s timer continues to count down and the group seems no closer to a solution by the time the timer reads "4:22:40." Four days, twenty-two hours, 40 minutes.</p>
+								<p>Paul, L, and Ivy are out on the beach watching the whale and ruminating when Tess walks up, holding a small device, her brows furrowed, her body tense with thought. “Okay, you guys--I’ve done something that might be useful.”</p>
+								<p>She shows them a TV-remote sized piece of tech that she explains can detect the presence of not just fungi, not just melanin, but both in one place. “I'm not sure it'll work, but I think it should be able to detect Paul's fungus. We'll run it along the water and it'll only go off if it detects a fungal presence and melanin in the same cubic millimeter."</p>
+								<p>L shrugs. "Makes sense to me. It's worth a try." </p>
+								<p>Tess, L, Paul, and Ivy pile into the boat and row toward the zig-zag border. When they’re as close as they can safely get, Tess turns on her sensor, and, to everyone’s surprise, casts out a long wire with a tiny floating ball sensor on the end of it. </p></p>
+								<p>“Fishing for mushrooms, huh?” Ivy says.</p>
+								<p>They row the boat parallel to the zig-zag border, dragging the ball sensor along the dark water. Soon, her little remote starts lighting up. “Does that mean…” L asks.</p>
+								<p>“Yep," says Tess. "If my sensor’s correct, then there are plenty of paultsakes in Apocolypta.”</p>
+								<p>"Woohoo!" says L. </p>
+								<p>“No, there probably aren't any <em>paultsakes</em> out there because those are what we would call the mushrooms, the fruiting body," says Paul. "I assume there is only <em>paulstakatic mycelia.</em>"</p>
+								<p>“Yeah, okay,” says Tess. <em>"paultsakatic mycelia."</em></p>
+								<p>“Okay,” says L. “So we have the mycelia out there. How do we get the mushrooms to grow? Can we grow them in the salt water?" </p>
+								<p>"No, no," says Paul. "We'd need some kind of soil out there, some kind of floating garden bed situation, maybe." </p>
+								<p>Tess laughs and runs her hand over her buzzed head.</p>
+								<p>L sighs. “Well, that sounds somewhat potentially doable. And then if we grew some mushrooms the radiation would be cleaned up?"</p>
+								<p>"I mean, you'd have to remove the mushrooms periodically. A quick grow, harvest cycle would probably remove some radiation."</p>
+								<p>"<em>Some</em> radiation?" asks Ivy. "How much? How long would that take, Paul?"</p>
+								<p>"Fuck if I know." </p>
+								<p>The three women sigh. </p>
+								<p>"Oh, okay," he continues. "Well I'd <em>guess</em> weeks would probably make a difference, assuming we could grow a whole bunch."</p>
+								<p>“Not good enough.” Ivy shakes her head. “We’ve got four days. Four days and about…” She looks at her watch. “Twenty hours.” They all exhale and go silent, listening to the water slosh and the occasional oar hitting the boat.</p>
+								<p>After a few minutes, they wordlessly grab the oars and start rowing back to shore.</p>
+								<p>*</p>
+								<p>At dinner that night, everyone shows up at the same time. Normally people straggle in over a period of an hour or two, some choosing to eat leftovers very late at night, skipping the communal meals entirely. On this evening, however, which is damp and humid, the whole group of thirty-four of them are there at 8pm sharp, chatting quietly, as if waiting for something.</p>
+								<p>As soon as the food is brought in to the dining room and set on the long, picnic-style table, a group of seven steps in front of the table and joins hands. Then Caroline, a woman with long white hair, says, “We’d like to invite everyone to join us in prayer, please.”</p>
+								<p>The others look around at each other, raise their eyebrows.</p>
+								<p>“Please, join hands,” Caroline says. </p>
+								<p>Many in the group shift their weight, look down or off to the side. A few tentatively reach out for the hands of their neighbors, some of whom awkwardly take the other's hand, some stepping aside entirely and moving toward the wall.</p>
+								<p>“Dear Director, Lord of this land, which has been revealed to us as Markam…” says Caroline.</p>
+								<p>Ivy steps closer to L and grabs her wrist. “What in the living hell…” she whispers.</p>
+								<p>“We thank you for the opportunity to live in your presence, and we thank you for choosing us for this mission of retrieving the crates from the radioactive water. We know that we must retrieve them before the timer runs out and we pray that we live up to this test. We want you to know we are willing to put our lives on the line to do what you ask. We pray that we will pass your test and be able to bask in your presence for the rest of eternity. Amen.”</p>
+								<p>Those in the crowd who'd been holding hands quickly release at the end of Caroline’s prayer. L catches eyes with George, who looks severely pale. L shakes her head in disbelief at the prayer, but George just stares. L mouths “You okay?” and then suddenly George tips over and falls, crashing on the bamboo floor and making it groan with a sound that seems to echo a collective feeling of dread. </p>
+								
+								
+							<details>
 							      <summary><h8><em>Part Seven</em></h8></summary>
 							      <p>The next morning is overcast, with a squall, dark and heavy, out near the horizon. Once again, L is alone on the part of the beach near the bamboo dock and metal boat. She digs her feet in the sand and looks through binoculars at the crates and the fluorescent zig-zag border, which appears even more unnatural in this gray, almost violet, pre-storm light. The wind is picking up. She feels she’s just on the verge of understanding something, as if a puzzle piece is about to snap into place, when she hears a <em>pop</em> loud enough to strain her eardrum. Not five feet in front of her, right at the water line, lies a tall, skinny man, wearing one water-logged boot and a scruffy pair of khaki trail shorts.</p>
 							      <p>He’s breathing rapidly. He lifts his head and looks around, catches sight of her. She tenses, then quickly crawls over. Soon she finds herself parroting George, projecting a friendliness and calm she doesn’t necessarily feel.</p>
