--- a/index.html
+++ b/index.html
@@ -58,6 +58,38 @@
 							<article><span class="image"><img src=images/tss-1.jpg alt text="that strange sensation logo" style="width:300px;height:300px;"> </img></span></article>
 							<p><h9>To sign up to receive the next installment in your inbox, go <a href=https://docs.google.com/forms/d/13r9zOV1WA9pKq0Mif7C7cdIhgjhjsVURkTKXmV9N06Y/> here</a></h9></p>
 							<details>
+								<summary><h8><em>Part Nine</em></h8></summary>
+								<p>Caroline and the others surround George, holding out their hands and praying over him.</p>
+								<p>"Get him outside! He needs air!" shouts Tess. The crowd parts. L and Paul help George hobble out, followed by Tess and Ivy.</p>
+								<p>“They’re fucking crazy,” George begins mumbling once they exit into the humid early nighttime. As the last light of the day seeps out over the horizon, the jungle gets louder and louder with croaking insects and frogs, the palm and coconut trees swaying and creaking in a newly swept-in breeze. A coconut falls from a tree with a large crash. </p>
+								<p>“This is all so fucking crazy!” George continues to mumble-yell, as they walk toward L and Paul’s palm tree. “Fucking <em>Markam?</em> What the <em>fuck</em>, man? Where the fuck are we? Can someone finally just fucking tell me that?”</p>
+								<p>It’s disconcerting to see someone who’d been a de facto leader since L arrived—<em>a week ago now</em>? she can’t be sure—go from being so poised, so “everything is fine” to this, pale, near-drooling man, eyes wide with terror.</p>
+								<p>“Look, George,” Ivy says, almost yelling, louder than L has ever heard her. “None of us are going to make it out alive if we let ourselves get obsessed over how crazy this all is. Of course people are getting religious, adding more delusions on top of the delusions we all have to buy into just to fucking exist here. People have different coping mechanisms. But it shouldn’t change our ability to process this shit as logically as we possibly can.”</p>
+								<p>They plop down under the tree. George is crying now, tiny hasty tears, but starting to breathe more deeply. He moans.</p>
+								<p>“I wish I could've warned you all," says Tess. "I found out what was going on with them before dinner. They’ve started a new religion. They think that the Director is testing us with those crates and that timer, and that if we pass, we'll be able to live here forever, like some kind of heaven." </p>
+								<p>Paul laughs loudly. “Heaven? If this is fucking heaven...I'll tell you if this isn't the most lucid dream I’ve ever had...” L can’t help but laugh a little too, though her head is uncomfortably thick with thoughts.</p>
+								<p>"Okay, but that's not far from what we've been saying,” George says. “I mean, Tess, you suggested not long ago that this is some kind of fucking test, or trap, or something. We all thought you were basically right. That we're somehow meant to try to get at those crates."</p>
+								<p>“Yeah, but we’re not <em>praying to some imagined director</em>," says Tess. "We’re using the best available information we have and coming up with some hypotheses. We're guessing that those crates are deliberately placed there for us. But I'm not saying I really know anything. I'm just trying to keep my head, to act on my natural human curiosity. We’re not leaping to conclusions. We’re being scientists.”</p>
+								<p>George lets out a big audible sigh. “Shit, sorry I fucking freaked out there for a minute y’all.”</p>
+								<p>“It’s okay. It’s normal,” says Ivy.</p>
+								<p>“You know, I went to one of their services before dinner today," says Tess.</p>
+								<p>The others stare at her wide eyed. </p>
+								<p>“Yeah, they do this ritual, you know. One of them, Jason, had this dream a couple nights ago, where the name Markam was revealed to him. And he was given the idea for this ritual where they stand on the beach out there at sunrise and sunset, and, well, praise the crates and the zig-zag border. They have this whole little dance they do, full of bowing and stuff. And then, ugh—" she paused.</p>
+								<p>“What?” says Ivy.</p>
+								<p>“Well, they go into the ocean, they grab one of those sea snakes, and they cut it open." She mimes a brutal knifing action. "And then, uh, well, they eat it raw."</p>
+								<p>“Oh, God,” moans George. Paul laughs again.</p>
+								<p>“Sea snakes?” L asks.</p>
+								<p>“Yeah,” says Tess. “You know the sea snakes that dart under the rocks—they’re sort of purply? They're super fast, I don’t know how they’ve become so good at catching them.”</p></p>
+								<p>L has that feeling of something clicking into place again. She remembers chasing the snakes in the shallow intertidal zones when she first arrived. Something about them seemed distinctive, unique, but she couldn’t ever catch one to study it.</p>
+								<p>“You know what I think?” Tess says. “I think this whole timer thing is bullshit. Everyone is freaking the fuck out but the fact is we don't really know what it's about. Maybe I’m just suspicious because Caroline and the others think that if we don’t retrieve the crates by the time the timer runs out then we’re screwed. That we’ll go to hell or something. At least that’s the impression I got.”</p>
+								<p>“So you're saying we ignore the giant whale with the timer on its back,” says Paul.</p>
+								<p>“We don’t ignore it, but we continue with our plans as if we don’t have four days left. I mean what other option do we have? I'm not going to go swimming out there in the radioactive waters. I'm not that desperate."</p>
+								<p>"Who's going swimming out there?" L asks.</p>
+								<p>"Oh I didn't mention that? They are. They've decided that's part of the test, that the Director wants to see whether they've got the resolve to..."</p>
+								<p>"Shit," says Ivy, shaking her head.</p>
+								<p>"Yeah," says Tess. "So I think we just continue on, continue acting like scientists. Maybe we try to use the mushrooms you discovered, Paul. Because I don't know what other choice we have."</p>
+								<p>The group goes silent for a moment. "I agree with Tess," says Ivy. "Maybe Caroline and the others are right. Maybe we all die, go to hell, whatever, when the timer goes off. But we don't know. And it seems like a pretty fascist way to get us to do something anyway. All I know is that I want to figure out what the hell is going on in those waters, and that the only way I keep my sanity here is to continue to act like a regular, even-keeled person. Proceed with caution. Do no harm. Do NOT go for a bath in Apocalypta.” </p>
+							<details>
 								<summary><h8><em>Part Eight</em></h8></summary>
 								<p>After L’s initial excitement over the synchronicity of Paul’s discovery and their radiation-related struggles, 
 								she realizes that there are a few problems with the idea of using Paul’s mushrooms to clean up the radiation around the crates: 1) They don’t have any of the paultsake mushrooms here, as far as she knows; 2) Even if they did, how would they get them over there without getting blasted by radiation themselves?</p>
