--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<p>Paul, L, and Ivy are out on the beach watching the whale and ruminating when Tess walks up, holding a small device, her brows furrowed, her body tense with thought. “Okay, you guys--I’ve done something that might be useful.”</p>
 								<p>She shows them a TV-remote sized piece of tech that she explains can detect the presence of not just fungi, not just melanin, but both in one place. “I'm not sure it'll work, but I think it should be able to detect Paul's fungus. We'll run it along the water and it'll only go off if it detects a fungal presence and melanin in the same cubic millimeter."</p>
 								<p>L shrugs. "Makes sense to me. It's worth a try." </p>
-								<p>Tess, L, Paul, and Ivy pile into the boat and row toward the zig-zag border. When they’re as close as they can safely get, Tess turns on her sensor, and, to everyone’s surprise, casts out a long wire with a tiny floating ball sensor on the end of it. </p></p>
+								<p>Tess, L, Paul, and Ivy pile into the boat and row toward the zig-zag border. When they’re as close as they can safely get, Tess turns on her sensor, and, to everyone’s surprise, casts out a long wire with a tiny floating ball sensor on the end of it. </p>
 								<p>“Fishing for mushrooms, huh?” Ivy says.</p>
 								<p>They row the boat parallel to the zig-zag border, dragging the ball sensor along the dark water. Soon, her little remote starts lighting up. “Does that mean…” L asks.</p>
 								<p>“Yep," says Tess. "If my sensor’s correct, then there are plenty of paultsakes in Apocolypta.”</p>
@@ -126,9 +126,7 @@
 								<p>“Dear Director, Lord of this land, which has been revealed to us as Markam…” says Caroline.</p>
 								<p>Ivy steps closer to L and grabs her wrist. “What in the living hell…” she whispers.</p>
 								<p>“We thank you for the opportunity to live in your presence, and we thank you for choosing us for this mission of retrieving the crates from the radioactive water. We know that we must retrieve them before the timer runs out and we pray that we live up to this test. We want you to know we are willing to put our lives on the line to do what you ask. We pray that we will pass your test and be able to bask in your presence for the rest of eternity. Amen.”</p>
-								<p>Those in the crowd who'd been holding hands quickly release at the end of Caroline’s prayer. L catches eyes with George, who looks severely pale. L shakes her head in disbelief at the prayer, but George just stares. L mouths “You okay?” and then suddenly George tips over and falls, crashing on the bamboo floor and making it groan with a sound that seems to echo a collective feeling of dread. </p>
-								
-								
+								<p>Those in the crowd who'd been holding hands quickly release at the end of Caroline’s prayer. L catches eyes with George, who looks severely pale. L shakes her head in disbelief at the prayer, but George just stares. L mouths “You okay?” and then suddenly George tips over and falls, crashing on the bamboo floor and making it groan with a sound that seems to echo a collective feeling of dread. </p>	
 							<details>
 							      <summary><h8><em>Part Seven</em></h8></summary>
 							      <p>The next morning is overcast, with a squall, dark and heavy, out near the horizon. Once again, L is alone on the part of the beach near the bamboo dock and metal boat. She digs her feet in the sand and looks through binoculars at the crates and the fluorescent zig-zag border, which appears even more unnatural in this gray, almost violet, pre-storm light. The wind is picking up. She feels she’s just on the verge of understanding something, as if a puzzle piece is about to snap into place, when she hears a <em>pop</em> loud enough to strain her eardrum. Not five feet in front of her, right at the water line, lies a tall, skinny man, wearing one water-logged boot and a scruffy pair of khaki trail shorts.</p>
