--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<summary><h8><em>Part Nine</em></h8></summary>
 								<p>Caroline and the others surround George, holding out their hands and praying over him.</p>
 								<p>"Get him outside! He needs air!" shouts Tess. The crowd parts. L and Paul help George hobble out, followed by Tess and Ivy.</p>
-								<p>“They’re fucking crazy,” George begins mumbling once they exit into the humid early nighttime. As the last light of the day seeps out over the horizon, the jungle gets louder and louder with croaking insects and frogs, the palm and coconut trees swaying and creaking in a newly swept-in breeze. A coconut falls from a tree with a large crash. </p>
+								<p>“They’re fucking crazy,” George begins mumbling once they exit into the humid early nighttime. As the last light of the day seeps out over the horizon, the jungle gets louder and louder with croaking insects and frogs, the palm and coconut trees swaying and creaking in a newly swept-in breeze. A coconut falls from a tree with a large crash.</p>
 								<p>“This is all so fucking crazy!” George continues to mumble-yell, as they walk toward L and Paul’s palm tree. “Fucking <em>Markam?</em> What the <em>fuck</em>, man? Where the fuck are we? Can someone finally just fucking tell me that?”</p>
 								<p>It’s disconcerting to see someone who’d been a de facto leader since L arrived—<em>a week ago now</em>? she can’t be sure—go from being so poised, so “everything is fine” to this, pale, near-drooling man, eyes wide with terror.</p>
 								<p>“Look, George,” Ivy says, almost yelling, louder than L has ever heard her. “None of us are going to make it out alive if we let ourselves get obsessed over how crazy this all is. Of course people are getting religious, adding more delusions on top of the delusions we all have to buy into just to fucking exist here. People have different coping mechanisms. But it shouldn’t change our ability to process this shit as logically as we possibly can.”</p>
@@ -79,7 +79,7 @@
 								<p>“Well, they go into the ocean, they grab one of those sea snakes, and they cut it open." She mimes a brutal knifing action. "And then, uh, well, they eat it raw."</p>
 								<p>“Oh, God,” moans George. Paul laughs again.</p>
 								<p>“Sea snakes?” L asks.</p>
-								<p>“Yeah,” says Tess. “You know the sea snakes that dart under the rocks—they’re sort of purply? They're super fast, I don’t know how they’ve become so good at catching them.”</p></p>
+								<p>“Yeah,” says Tess. “You know the sea snakes that dart under the rocks—they’re sort of purply? They're super fast, I don’t know how they’ve become so good at catching them.”</p>
 								<p>L has that feeling of something clicking into place again. She remembers chasing the snakes in the shallow intertidal zones when she first arrived. Something about them seemed distinctive, unique, but she couldn’t ever catch one to study it.</p>
 								<p>“You know what I think?” Tess says. “I think this whole timer thing is bullshit. Everyone is freaking the fuck out but the fact is we don't really know what it's about. Maybe I’m just suspicious because Caroline and the others think that if we don’t retrieve the crates by the time the timer runs out then we’re screwed. That we’ll go to hell or something. At least that’s the impression I got.”</p>
 								<p>“So you're saying we ignore the giant whale with the timer on its back,” says Paul.</p>
