--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 								<p>"Shit," says Ivy, shaking her head.</p>
 								<p>"Yeah," says Tess. "So I think we just continue on, continue acting like scientists. Maybe we try to use the mushrooms you discovered, Paul. Because I don't know what other choice we have."</p>
 								<p>The group goes silent for a moment. "I agree with Tess," says Ivy. "Maybe Caroline and the others are right. Maybe we all die, go to hell, whatever, when the timer goes off. But we don't know. And it seems like a pretty fascist way to get us to do something anyway. All I know is that I want to figure out what the hell is going on in those waters, and that the only way I keep my sanity here is to continue to act like a regular, even-keeled person. Proceed with caution. Do no harm. Do NOT go for a bath in Apocalypta.” </p>
+							</details>
 							<details>
 								<summary><h8><em>Part Eight</em></h8></summary>
 								<p>After L’s initial excitement over the synchronicity of Paul’s discovery and their radiation-related struggles, 
